--- a/src/main/resources/static/axios.html
+++ b/src/main/resources/static/axios.html
@@ -5,7 +5,10 @@
     <title>axios</title>
     <link rel="stylesheet" href="css/table.css">
     <!--    真正的标签：高速，正规，版本新兼容性强加载还快-->
-    <script src="https://cdn.staticfile.org/vue/2.4.2/vue.min.js"></script>
+<!--    https://cdn.baomitu.com/vue   cdn大全-->
+<!--    <script src="https://cdn.staticfile.org/vue/2.4.2/vue.min.js"></script>-->
+    <script crossorigin="anonymous" integrity="sha512-h3aCJRk6tEHugDYUidF7GqixhzgeXSiSdq5U+5oLIJtIncSQq6eev48qqYfuTdrsH5Q1eO4IAmyJGDwzRaWNNQ==" src="https://lib.baomitu.com/vue/2.6.12/vue.common.dev.js"></script>
+
     <script src="https://cdn.staticfile.org/axios/0.18.0/axios.min.js"></script>
     <!--    &ndash;&gt;虚假标签：垃圾，加载慢，版本低，易出错-->
     <!--&lt;!&ndash;    <script src="//unpkg.com/vue/dist/vue.js"></script>-->
@@ -36,6 +39,9 @@
             <el-button type="primary" @click="fun">函数调用</el-button>
         </el-form-item>
     </el-form>
+
+    <el-button type="primary" @click="handleClickadd">添加</el-button>
+
     <p>{{formInline.userid}}</p>
     <p>{{info}}</p>
 
@@ -68,13 +74,101 @@
                     prop="address"
                     label="地址">
             </el-table-column>
+            <el-table-column
+                    fixed="right"
+                    label="操作"
+                    width="160">
+                <template slot-scope="scope">
+                    <el-button  @click="handleClick(scope.row)" type="text" size="small">查看</el-button>
+                    <el-button  @click="handleClickup(scope.row)" type="text" size="small">编辑吧</el-button>
+                    <el-button  @click="handleClickdel(scope.row)" type="text" size="small">删除</el-button>
+                </template>
+            </el-table-column>
         </el-table>
     </template>
+
+    <el-drawer
+            title="添加面板"
+            :before-close="handleClose"
+            :visible.sync="dialog"
+            direction="ltr"
+            custom-class="demo-drawer"
+            ref="drawer"
+    >
+        <div class="demo-drawer__content">
+            <el-form ref="form" :model="form" label-width="20%">
+                <el-form-item label="姓名">
+                    <el-input v-model="form.username" autocomplete="off"></el-input>
+                </el-form-item>
+                <el-form-item label="性别">
+                    <el-select v-model="form.sex" placeholder="性别">
+                        <el-option label="哀绝" value="男"></el-option>
+                        <el-option label="挽歌" value="女"></el-option>
+                    </el-select>
+                </el-form-item>
+                <el-form-item label="地址">
+                    <el-input v-model="form.address" autocomplete="off"></el-input>
+                </el-form-item>
+                <el-form-item label="日期">
+                    <el-date-picker
+                            v-model="form.birthday"
+                            type="datetime"
+                            placeholder="选择日期时间">
+                    </el-date-picker>
+                </el-form-item>
+            </el-form>
+            <div class="demo-drawer__footer">
+                <el-button @click="cancelForm">取 消</el-button>
+                <el-button type="primary" @click="$refs.drawer.closeDrawer()" :loading="loading">{{ loading ? '提交中 ...' : '确 定' }}</el-button>
+            </div>
+        </div>
+    </el-drawer>
+
+    <el-drawer
+            title="编辑面板"
+            :before-close="handleClose"
+            :visible.sync="dialogupdata"
+            direction="rtl"
+            custom-class="demo-drawer"
+            ref="drawer"
+    >
+        <div class="demo-drawer__content">
+            <el-form ref="form" :model="form" label-width="20%">
+                <el-form-item label="id">
+                    <el-input v-model="form.id" autocomplete="off" :disabled="true"></el-input>
+<!--                    <el-input v-model="form.id" autocomplete="off" ></el-input>-->
+                </el-form-item>
+                <el-form-item label="姓名">
+                    <el-input v-model="form.username" autocomplete="off"></el-input>
+                </el-form-item>
+                <el-form-item label="性别">
+                    <el-select v-model="form.sex" placeholder="性别">
+                        <el-option label="哀绝" value="男"></el-option>
+                        <el-option label="挽歌" value="女"></el-option>
+                    </el-select>
+                </el-form-item>
+                <el-form-item label="地址">
+                    <el-input v-model="form.address" autocomplete="off"></el-input>
+                </el-form-item>
+                <el-form-item label="日期">
+                    <el-date-picker
+                            v-model="form.birthday"
+                            type="datetime"
+                            placeholder="选择日期时间">
+                    </el-date-picker>
+                </el-form-item>
+            </el-form>
+            <div class="demo-drawer__footer">
+                <el-button @click="cancelForm">取 消</el-button>
+                <el-button type="primary" @click="$refs.drawer.closeDrawer()" :loading="loading">{{ loading ? '提交中 ...' : '确 定' }}</el-button>
+            </div>
+        </div>
+    </el-drawer>
 
     <el-pagination
             @size-change="handleSizeChange"
             @current-change="handleCurrentChange"
-            :current-page="currentPage"
+            :current-page="pageNum"
             :page-sizes="[2, 3, 4, 5, 10, 30]"
             :page-size="pageSize"
             layout="total, sizes, prev, pager, next, jumper"
@@ -82,7 +176,7 @@
     </el-pagination>
 <!--    <input v-model="pageSize">-->
     <p>{{pageSize}}</p>
-    <p>{{currentPage}}</p>
+    <p>{{pageNum}}</p>
 
 </div>
 <script src="js/axios.js"></script>
