--- a/src/main/resources/static/table.html
+++ b/src/main/resources/static/table.html
@@ -5,7 +5,9 @@
     <title>table</title>
     <link rel="stylesheet" href="css/table.css">
 <!--    真正的标签：高速，正规，版本新兼容性强加载还快-->
-    <script src="https://cdn.staticfile.org/vue/2.4.2/vue.min.js"></script>
+<!--    <script src="https://cdn.staticfile.org/vue/2.4.2/vue.min.js"></script>-->
+    <script crossorigin="anonymous" integrity="sha512-h3aCJRk6tEHugDYUidF7GqixhzgeXSiSdq5U+5oLIJtIncSQq6eev48qqYfuTdrsH5Q1eO4IAmyJGDwzRaWNNQ==" src="https://lib.baomitu.com/vue/2.6.12/vue.common.dev.js"></script>
+
     <script src="https://cdn.staticfile.org/axios/0.18.0/axios.min.js"></script>
 <!--    &ndash;&gt;虚假标签：垃圾，加载慢，版本低，易出错-->
 <!--&lt;!&ndash;    <script src="//unpkg.com/vue/dist/vue.js"></script>-->
@@ -14,7 +16,9 @@
 <body>
 <div id="app">
     <input type="text" placeholder="usernames" v-model="usernames"><br>
+
     <button value="提交" @click="getPost">提交</button><br>
+
     <el-form :inline="true" :model="formInline" class="demo-form-inline">
         <el-form-item label="审批人">
             <el-input v-model="formInline.user" placeholder="审批人"></el-input>
@@ -29,31 +33,74 @@
             <el-button type="primary" @click="onSubmit">查询</el-button>
         </el-form-item>
     </el-form>
+
     <p>
-        {{id}}
-        {{info}}
-        {{joke}}
-        {{usernames}}
+        {{id}}<br>
+        {{info}}<br>
+        {{joke}}<br>
+        {{usernames}}<br>
         {{formInline.user}}
     </p>
+
+    <el-button type="text" @click="dialog = true">打开嵌套 Form 的 Drawer</el-button>
+
+    <el-drawer
+            title="添加面板"
+            :before-close="handleClose"
+            :visible.sync="dialog"
+            direction="ltr"
+            custom-class="demo-drawer"
+            ref="drawer"
+    >
+        <div class="demo-drawer__content">
+            <el-form :model="form">
+                <el-form-item label="姓名" :label-width="formLabelWidth">
+                    <el-input v-model="form.name" autocomplete="off"></el-input>
+                </el-form-item>
+                <el-form-item label="性别" :label-width="formLabelWidth">
+                    <el-select v-model="form.sex" placeholder="性别">
+                        <el-option label="哀绝" value="男"></el-option>
+                        <el-option label="挽歌" value="女"></el-option>
+                    </el-select>
+                </el-form-item>
+            </el-form>
+            <div class="demo-drawer__footer">
+                <el-button @click="cancelForm">取 消</el-button>
+                <el-button type="primary" @click="$refs.drawer.closeDrawer()" :loading="loading">{{ loading ? '提交中 ...' : '确 定' }}</el-button>
+            </div>
+        </div>
+    </el-drawer>
+
     <template>
         <el-table
                 :data="tableData"
                 style="width: 100%"
                 :row-class-name="tableRowClassName">
             <el-table-column
+                    fixed
                     prop="date"
                     label="日期"
-                    width="180">
+                    width="150">
             </el-table-column>
+<!--            不协调的笨重步伐-->
+<!--            无法回应-->
             <el-table-column
                     prop="name"
                     label="姓名"
-                    width="180">
+                    width="120">
             </el-table-column>
             <el-table-column
                     prop="address"
                     label="地址">
+            </el-table-column>
+            <el-table-column
+                    fixed="right"
+                    label="操作"
+                    width="100">
+                <template slot-scope="scope">
+                    <el-button @click="handleClick(scope.row)" type="text" size="small">查看</el-button>
+                    <el-button  @click="handleClickup(scope.row)" type="text" size="small">编辑吧</el-button>
+                </template>
             </el-table-column>
         </el-table>
     </template>
@@ -63,6 +110,47 @@
             layout="prev, pager, next"
             :total="1000">
     </el-pagination>
+
+    <el-drawer
+            title="编辑面板"
+            :before-close="handleClose"
+            :visible.sync="dialogupdata"
+            direction="rtl"
+            custom-class="demo-drawer"
+            ref="drawer"
+
+    >
+        <div class="demo-drawer__content">
+            <el-form ref="form" :model="form" label-width="20%">
+                <el-form-item label="姓名">
+                    <el-input v-model="form.name" autocomplete="off"></el-input>
+                </el-form-item>
+                <el-form-item label="性别">
+                    <el-select v-model="form.sex" placeholder="性别">
+                        <el-option label="哀绝" value="男"></el-option>
+                        <el-option label="挽歌" value="女"></el-option>
+                    </el-select>
+                </el-form-item>
+                <el-form-item label="地址">
+                    <el-input v-model="form.address" autocomplete="off"></el-input>
+                </el-form-item>
+                <el-form-item label="日期">
+                    <el-date-picker
+                            v-model="form.date"
+                            type="date"
+                            placeholder="选择日期"
+                            format="yyyy 年 MM 月 dd 日"
+                            value-format="yyyy-MM-dd">
+                    </el-date-picker>
+                </el-form-item>
+
+            </el-form>
+            <div class="demo-drawer__footer">
+                <el-button @click="cancelForm">取 消</el-button>
+                <el-button type="primary" @click="$refs.drawer.closeDrawer()" :loading="loading">{{ loading ? '提交中 ...' : '确 定' }}</el-button>
+            </div>
+        </div>
+    </el-drawer>
 
 </div>
 <script src="js/table.js"></script>
