完成增删改查

--- a/src/main/resources/static/axios.html
+++ b/src/main/resources/static/axios.html
@@ -7,9 +7,10 @@
     <!--    真正的标签：高速，正规，版本新兼容性强加载还快-->
 <!--    https://cdn.baomitu.com/vue   cdn大全-->
 <!--    <script src="https://cdn.staticfile.org/vue/2.4.2/vue.min.js"></script>-->
-    <script crossorigin="anonymous" integrity="sha512-h3aCJRk6tEHugDYUidF7GqixhzgeXSiSdq5U+5oLIJtIncSQq6eev48qqYfuTdrsH5Q1eO4IAmyJGDwzRaWNNQ==" src="https://lib.baomitu.com/vue/2.6.12/vue.common.dev.js"></script>
-
-    <script src="https://cdn.staticfile.org/axios/0.18.0/axios.min.js"></script>
+<!--    <script crossorigin="anonymous" integrity="sha512-h3aCJRk6tEHugDYUidF7GqixhzgeXSiSdq5U+5oLIJtIncSQq6eev48qqYfuTdrsH5Q1eO4IAmyJGDwzRaWNNQ==" src="https://lib.baomitu.com/vue/2.6.12/vue.common.dev.js"></script>-->
+    <script src="js/vue2.6.12.common.dev.js"></script>
+    <script src="js/axios.min.js"></script>
+<!--    <script src="https://cdn.staticfile.org/axios/0.18.0/axios.min.js"></script>-->
     <!--    &ndash;&gt;虚假标签：垃圾，加载慢，版本低，易出错-->
     <!--&lt;!&ndash;    <script src="//unpkg.com/vue/dist/vue.js"></script>-->
     <script src="//unpkg.com/element-ui@2.15.0/lib/index.js"></script>
