--- a/src/main/resources/static/table.html
+++ b/src/main/resources/static/table.html
@@ -70,11 +70,12 @@
             </div>
         </div>
     </el-drawer>
-
+<!--吾以为-->
+<!--    意识化-->
     <template>
         <el-table
                 :data="tableData"
-                style="width: 100%"
+                style="width: 80%"
                 :row-class-name="tableRowClassName">
             <el-table-column
                     fixed
@@ -98,7 +99,9 @@
                     label="操作"
                     width="100">
                 <template slot-scope="scope">
-                    <el-button @click="handleClick(scope.row)" type="text" size="small">查看</el-button>
+                    <el-button @click="handleClick(scope.row)" type="text" size="small"><i class="el-icon-edit"></i></el-button>
+<!--                    不必是我-->
+                    <el-button  type="text" size="small">删除</el-button>
                     <el-button  @click="handleClickup(scope.row)" type="text" size="small">编辑吧</el-button>
                 </template>
             </el-table-column>
